# mathlib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  amathlib.h  aml_lua_binding.cpp  aml_lua_binding.h  cudatest.cu  emcc.sh  main.cpp  test.lua  testComplex.cpp  testlua.cpp
samples/: Makefile  mandelbrot.cpp  mandelbrot32.cpp
